[Customize Chrome] Fix toolbar info text spacing
Bug: 365761497
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5871285
Commit-Queue: David Pennington <dpenning@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1357316}

--- a/chrome/browser/resources/side_panel/customize_chrome/customize_toolbar/toolbar.css
+++ b/chrome/browser/resources/side_panel/customize_chrome/customize_toolbar/toolbar.css
@@ -81,7 +81,7 @@
   color: var(--cr-secondary-text-color);
   font-weight: 400;
   text-align: center;
-  padding: 0 0 8px;
+  padding: 0 0 16px;
 }
 
 #tipCard {
@@ -115,6 +115,6 @@
   border-radius: 12px;
   display: flex;
   justify-content: center;
-  margin-bottom: 12px;
+  margin-bottom: 8px;
   padding: 16px;
 }
